changes to files
changed experiment1 to study1 and its corresponding URLS, HTMLs, links...
Added study2 folder, changed selection.qmd for study2

--- a/analysis/2_emotions.qmd
+++ b/analysis/2_emotions.qmd
@@ -729,6 +729,8 @@ sex_act_plot
 
 ### Believed
 
+<!-- Effect becomes larger, more significant and goes in both directions for both genders -->
+
 ```{r}
 m <- glmmTMB::glmmTMB(Enticement ~ Sex / Relevance / Condition + (Relevance | Participant) + (1|Item),
                       data=filter(df, ConditionBelief == "True"), 
